@@ -138,8 +138,8 @@ INSERT INTO items VALUES (10049,0,'','',161,10001,'Number of running processes m
 INSERT INTO items VALUES (10050,0,'','',161,10001,'Number of running processes syslogd','proc_cnt[syslogd]',60,7,365,0,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','',0,'');
 INSERT INTO items VALUES (10051,0,'','',161,10001,'Number of running processes sshd','proc_cnt[sshd]',60,7,365,0,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','',0,'');
 INSERT INTO items VALUES (10052,0,'','',161,10001,'Number of running processes zabbix_agentd','proc_cnt[zabbix_agentd]',60,7,365,0,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','',0,'');
-INSERT INTO items VALUES (10053,0,'','',161,10001,'Number of running processes zabbix_suckerd','proc_cnt[zabbix_suckerd]',60,7,365,0,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','',0,'');
-INSERT INTO items VALUES (10054,0,'','',161,10001,'Number of running processes zabbix_trapperd','proc_cnt[zabbix_trapperd]',60,7,365,0,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','',0,'');
+INSERT INTO items VALUES (10053,0,'','',161,10001,'Number of running processes zabbix_server','proc_cnt[zabbix_server]',60,7,365,0,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','',0,'');
+--INSERT INTO items VALUES (10054,0,'','',161,10001,'Number of running processes zabbix_trapperd','proc_cnt[zabbix_trapperd]',60,7,365,0,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','',0,'');
 INSERT INTO items VALUES (10055,0,'','',161,10001,'Maximum number of processes','kern[maxproc]',1800,7,365,0,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','',0,'');
 INSERT INTO items VALUES (10056,0,'','',161,10001,'Maximum number of opened files','kern[maxfiles]',1800,7,365,0,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','',0,'');
 INSERT INTO items VALUES (10057,0,'','',161,10001,'Host name','system[hostname]',1800,7,365,0,NULL,NULL,NULL,0,1,'','',0,0,NULL,'',0,'','',0,'');
@@ -484,8 +484,8 @@ INSERT INTO triggers VALUES (10035,'{10225}<1','Mysql is not running on {HOSTNAM
 INSERT INTO triggers VALUES (10036,'{10231}<1','Syslogd is not running on {HOSTNAME}','',0,2,3,0,0,'');
 INSERT INTO triggers VALUES (10037,'{10230}<1','Sshd is not running on {HOSTNAME}','',0,2,3,0,0,'');
 INSERT INTO triggers VALUES (10038,'{10237}<1','Zabbix_agentd is not running on {HOSTNAME}','',0,2,3,0,0,'');
-INSERT INTO triggers VALUES (10039,'{10238}<1','Zabbix_suckerd is not running on {HOSTNAME}','',0,2,3,0,0,'');
-INSERT INTO triggers VALUES (10040,'{10239}<1','Zabbix_trapperd is not running on {HOSTNAME}','',0,2,3,0,0,'');
+INSERT INTO triggers VALUES (10039,'{10238}<1','Zabbix_server is not running on {HOSTNAME}','',0,2,3,0,0,'');
+--INSERT INTO triggers VALUES (10040,'{10239}<1','Zabbix_trapperd is not running on {HOSTNAME}','',0,2,3,0,0,'');
 INSERT INTO triggers VALUES (10041,'{10204}<256','Configured max number of processes is too low on {HOSTNAME}','',0,2,1,0,0,'');
 INSERT INTO triggers VALUES (10042,'{10203}<512','Configured max number of opened files is too low on {HOSTNAME}','',0,2,1,0,0,'');
 INSERT INTO triggers VALUES (10043,'{10208}>0','Hostname was changed on {HOSTNAME}','',0,2,1,0,0,'');
@@ -765,7 +765,7 @@ INSERT INTO functions VALUES (10231,10050,10036,NULL,'last','0');
 INSERT INTO functions VALUES (10230,10051,10037,NULL,'last','0');
 INSERT INTO functions VALUES (10237,10052,10038,NULL,'last','0');
 INSERT INTO functions VALUES (10238,10053,10039,NULL,'last','0');
-INSERT INTO functions VALUES (10239,10054,10040,NULL,'last','0');
+--INSERT INTO functions VALUES (10239,10054,10040,NULL,'last','0');
 INSERT INTO functions VALUES (10204,10055,10041,NULL,'last','0');
 INSERT INTO functions VALUES (10203,10056,10042,NULL,'last','0');
 INSERT INTO functions VALUES (10208,10057,10043,NULL,'diff','0');
